--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="col-sm-2 col-md-2">
                         <i class="fas fa-user"></i>
                     </div>
-                    <div class="col-sm-10 col-md-9">
+                    <div class="col-sm-9 col-md-9">
                         <label>ALI ZUBAIR</label>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                     <div class="col-sm-2 col-md-2">
                         <i class="fas fa-home"></i>
                     </div>
-                    <div class="col-sm-10 col-md-9">
+                    <div class="col-sm-9 col-md-9">
                         <label>15 STREET, AMIR BADR</label>
                         <br>
                         <label>KHOBAR, SAUDI ARABIA </label>
@@ -55,7 +55,7 @@
                     <div class="col-sm-2 col-md-2">
                         <i class="fas fa-envelope"></i>
                     </div>
-                    <div class="col-sm-10 col-md-9">
+                    <div class="col-sm-9 col-md-9">
                         <label>ali.zubair98@outlook.com</label>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                     <div class="col-sm-2 col-md-2">
                         <i class="fab fa-linkedin"></i>
                     </div>
-                    <div class="col-sm-10 col-md-9">
+                    <div class="col-sm-9 col-md-9">
                         <label><a href="www.linkedin.com/in/ali-zubair-4258191ab">linkedin.com/in/ali-zubair-4258191ab</a></label>
                     </div>
                 </div>
@@ -125,6 +125,117 @@
                 </div>
 
                 <hr style="width: 90%; border-color: black;">
+
+                <div class="row">
+                    <p>
+                        Promising Web Developer on Dotnet Core worked on applications using MVC 5.0. Creating API’s using AJAX and JSON. 
+                        Organizing application in an n-tier application and implementing repository pattern for data access between tiers. 
+                        Designing responsive and user-friendly CMS with integrating third party tool. Creating Chatbots using IBM Watson 
+                        Assitant and deploying on WordPress sites or social media sites.
+                    </p>
+                </div>
+
+                <br>
+
+                <div class="row justify-content-center">
+                    <h4>Work Experience</h4>
+                </div>
+
+                <hr style="width:90%; border-color:black">
+
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <h5>Dot Net(.Net) Developer</h5>
+                    </div>
+                    <div class="col-sm-12 col-md-6 text-sm-left text-md-right">
+                        <h5>12/2018 - 06/2020</h5>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12">
+                        <h6>Al Shorouk Business Optimization And Solutions, Manama, Bahrain</h6>
+                    </div>
+                    <div class="col-12">
+                        <ul>
+                            <li>
+                                <i class="fas fa-angle-double-right" style="color:black"></i>
+                                &nbsp;
+                                Implemented N-Tier architecture, separating business, presentation, and data models.
+                            </li>
+                            <li>
+                                <i class="fas fa-angle-double-right" style="color:black"></i>
+                                &nbsp;
+                                Implementing Repository Pattern for data access between tiers.
+                            </li>
+                            <li>
+                                <i class="fas fa-angle-double-right" style="color:black"></i>
+                                &nbsp;
+                                Using SQL Server database to store data.
+                            </li>
+                            <li>
+                                <i class="fas fa-angle-double-right" style="color:black"></i>
+                                &nbsp;
+                                Creating CRUD functionality using C# and ASP.Net
+                            </li>
+                            <li><i class="fas fa-angle-double-right" style="color:black"></i>
+                                &nbsp;
+                                Implementing API using AJAX and JSON
+                            </li>
+                            <li>
+                                <i class="fas fa-angle-double-right" style="color:black"></i>
+                                &nbsp;
+                                Creating responsive and user-friendly CMS with bootstrap, HTML5, CSS3 and third-party 
+                                tools like Data Tables and Sweet Alerts.
+                            </li>
+                            <li>
+                                <i class="fas fa-angle-double-right" style="color:black"></i>
+                                &nbsp;
+                                Creating user areas and restrictions.
+                            </li>
+                            <li>
+                                <i class="fas fa-angle-double-right" style="color:black"></i>
+                                &nbsp;
+                                Developed and designed Use cases and design documents.
+                            </li>
+                        </ul>
+                    </div>
+                    <hr class="w-75" style="border-color: black;">
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <h5>WordPress Developer</h5>
+                    </div>
+                    <div class="col-sm-12 col-md-6 text-sm-left text-md-right">
+                        <h5>08/2018 - 12/2020</h5>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12">
+                        <h6>Al Shorouk Business Optimization And Solutions, Manama, Bahrain</h6>
+                    </div>
+                    <div class="col-12">
+                        <ul>
+                            <li>
+                                <i class="fas fa-angle-double-right" style="color:black"></i>
+                                &nbsp;
+                                Creating and Designing Static Pages using default CMS.
+                            </li>
+                            <li>
+                                <i class="fas fa-angle-double-right" style="color:black"></i>
+                                &nbsp;
+                                Integrating different themes for websites.
+                            </li>
+                            <li>
+                                <i class="fas fa-angle-double-right" style="color:black"></i>
+                                &nbsp;
+                                Custom modifying themes as per user requirements.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
             </div>
 		</div>
