--- a/index.html
+++ b/index.html
@@ -1,11 +1,216 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<!-- Required meta tags -->
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/site.css">
+
+    <title>Ali Zubair Resume</title>
+  </head>
+  <body>
+
+    <div class="container">
+        <div class="row col-12">
+            <div class="col-sm-3 bg-dark">
+                <div class="pl-3 pt-2">
+                    <img src="www/Ali-Zubair.jpg" class="ali-img">
+                    <!--<img src="./www/Ali-Zubair.jpg" style="width: 220px; height: 220px; border-radius: 100%; border:3px solid black;">-->
+                    <br>
+                    <br>
+                    <h5 class="text-white">Personal Details</h6>
+                    <hr style="border-color: white;">
+                    <p class="text-white">Name</p>
+                    <p class="text-muted">Ali Zubair</p>
+                    <p class="text-white">Address</p>
+                    <p class="text-muted">15 Street, Prince Badr</p>
+                    <p class="text-muted">Al-Khobar, Saudi Arabia</p>
+                    <p class="text-white">Phone Number</p>
+                    <p class="text-muted">+966597566110</p>
+                    <p class="text-white">Email Address</p>
+                    <p class="text-muted">ali.zubair98@outlook.com</p>
+                    <p class="text-muted">alizubair2167@gmail.com</p>
+                    <p class="text-white">LinkedIn</p>
+                    <p class="text-muted"><a href="www.linkedin.com/in/ali-zubair-4258191ab">linkedin.com/in/ali-zubair-4258191ab</a></p>
+                    <br>
+                    <h5 class="text-white">Skills</h6>
+                    <hr style="border-color: white;">
+                    <p class="text-muted">C#</p>
+                    <p class="text-muted">ChatBot</p>
+                    <p class="text-muted">JavaScript, jQuery</p>
+                    <p class="text-muted">AJAX, JSON</p>
+                    <p class="text-muted">Bootstrap</p>
+                    <p class="text-muted">HTML5, CSS3</p>
+                    <br>
+                    <h5 class="text-white">Tools</h6>
+                    <hr style="border-color: white;">
+                    <p class="text-muted">Visual Studio 2017, 2019</p>
+                    <p class="text-muted">MySQL Server, SSMS</p>
+                    <p class="text-muted">IBM Watson Assistant</p>
+                    <p class="text-muted">MS-Office Word, Excel, PowerPoint</p>
+                    <p class="text-muted">Adobe Photshop/Illustrator</p>
+                    <br>
+                    <h5 class="text-white">Languages</h6>
+                    <hr style="border-color: white;">
+                    <div class="row">
+                        <div class="col-4">
+                            <p class="text-white">English</p>
+                        </div>
+                        <div class="col-8">
+                            <p class="text-muted">Proficient User</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-9">
+                <div class="col pl-2">
+                    <h2 class="pt-4">
+                        Ali Zubair
+                        &nbsp;
+                        <img src="./www/exam-480-programming-in-html5-with-javascript-and-css3.png" class="cus-img">
+                        &nbsp;
+                        <img src="./www/build-your-own-chatbot-level-1.png" class="cus-img">
+                    </h3>
+                    <hr style="border-color: lightslategray;">
+                    <p class="text-muted">
+                        Promising Web Developer on Dotnet Core worked on applications using MVC 5.0. Creating API’s using AJAX and JSON. 
+                        Organizing application in an n-tier application and implementing repository pattern for data access between tiers. 
+                        Designing responsive and user-friendly CMS with integrating third party tool. Create flexible chatbots for WordPress 
+                        or social media sites.
+                    </p>
+                    <br>
+                    <h5>Work Experience</h6>
+                    <hr style="border-color: lightslategray;">
+                    <div class="row">
+                        <div class="col-sm-7">
+                            <p class="text-dark">Junior Dotnet Developer</p>
+                        </div>
+                        <div class="col-sm-5 text-right">
+                            <p class="text-dark">12/2019 - 06/2020</p>
+                        </div>
+                    </div>
+                    <p style="font-style: italic;">Al Shorouk Business Optimization and Solutions</p>
+                    <ul>
+                        <li>Implemented N-Tier architecture, separating business, presentation, and data models.</li>
+                        <li>Implementing Repository Pattern for data access between tiers.</li>
+                        <li>Using SQL Server database to store data.</li>
+                        <li>Creating CRUD functionality using C# and ASP.Net</li>
+                        <li>Implementing API using AJAX and JSON</li>
+                        <li>Creating responsive and user-friendly CMS with bootstrap, HTML5, CSS3 and third-party tools like Data Tables and Sweet Alerts.</li>
+                        <li>Creating user areas and restrictions.</li>
+                        <li>Developed and designed Use cases and design documents.</li>
+                    </ul>
+                    <hr class="w-75" style="border-color: lightslategray;">
+                    <br>
+                    <div class="row">
+                        <div class="col-sm-7">
+                            <p class="text-dark">WordPress Developer</p>
+                        </div>
+                        <div class="col-sm-5 text-right">
+                            <p class="text-dark">08/2018 - 12/2018</p>
+                        </div>
+                    </div>
+                    <p style="font-style: italic;">Al Shorouk Business Optimization and Solutions</p>
+                    <ul>
+                        <li>Creating and Designing Static Pages using default CMS.</li>
+                        <li>Integrating different themes for websites.</li>
+                        <li>Custom modifying themes as per user requirements.</li>
+                    </ul>
+                    <br>
+                    <h5>Education and Qualifications</h6>
+                    <hr style="border-color: lightslategray;">
+                    <div class="row">
+                        <div class="col-sm-7">
+                            <p class="text-dark">Build Your Own Chatbot - Level 1</p>
+                        </div>
+                        <div class="col-sm-5 text-right">
+                            <p class="text-dark">2020</p>
+                        </div>
+                    </div>
+                    <p style="font-style: italic;">IBM</p>
+                    <hr class="w-75" style="border-color: lightslategray;">
+                    <div class="row">
+                        <div class="col-sm-7">
+                            <p class="text-dark">Search Engine Optimization (SEO)</p>
+                        </div>
+                        <div class="col-sm-5 text-right">
+                            <p class="text-dark">2019</p>
+                        </div>
+                    </div>
+                    <p style="font-style: italic;">DigiSkills</p>
+                    <hr class="w-75" style="border-color: lightslategray;">
+                    <div class="row">
+                        <div class="col-sm-7">
+                            <p class="text-dark">Graphic Designing</p>
+                        </div>
+                        <div class="col-sm-5 text-right">
+                            <p class="text-dark">2019</p>
+                        </div>
+                    </div>
+                    <p style="font-style: italic;">DigiSkills</p>
+                    <hr class="w-75" style="border-color: lightslategray;">
+                    <div class="row">
+                        <div class="col-sm-7">
+                            <p class="text-dark">Microsoft Certified Professional (MCP)</p>
+                        </div>
+                        <div class="col-sm-5 text-right">
+                            <p class="text-dark">2018</p>
+                        </div>
+                    </div>
+                    <p style="font-style: italic;">Microsoft</p>
+                    <hr class="w-75" style="border-color: lightslategray;">
+                    <div class="row">
+                        <div class="col-sm-7">
+                            <p class="text-dark">Bachelor in Computer Science</p>
+                        </div>
+                        <div class="col-sm-5 text-right">
+                            <p class="text-dark">2016 - 2020</p>
+                        </div>
+                    </div>
+                    <p style="font-style: italic;">Virtual University of Pakistan</p>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/12ea737b71.js" crossorigin="anonymous"></script>
+  </body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<!DOCTYPE html>
+<html>
+<head>
+	
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/site.css">
 
@@ -237,16 +442,38 @@
                     </div>
                 </div>
 
+                <br>
+
+                <div class="row justify-content-center">
+                    <h4>Education and Qualifications</h4>
+                </div>
+
+                <hr style="width:90%; border-color:black">
+
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <p>Build Your Own Chatbot</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <p>2020</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <p>IBM</p>
+                </div>
+
+                <hr class="w-75" style="border-color: black;">
+
             </div>
 		</div>
 
 	</div>
 
-	<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/12ea737b71.js" crossorigin="anonymous"></script>
 </body>
-</html>
+</html>-->
