--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <div class="col-md-8">
 
               <p>
-                I am an accomplished Dot Net (.Net) Core Developer, capable of creating complex applications from scratch and solving existing application
+                I am an experienced Dot Net (.Net) Core Developer, capable of creating complex applications from scratch and solving existing application
                 bugs delivering best quality products possible.
               </p>
               <p>
@@ -411,6 +411,16 @@
                       <i class="fa fa-envelope"></i>
                     </span>
                     ali.zubair98@outlook.com
+                  </a>
+                </p>
+              </div>
+              <div class="col-md-3">
+                <p class="social-buttons">
+                  <a>
+                    <span class="social-round-icon fa-icon">
+                      <i class="fa fa-phone"></i>
+                    </span>
+                    +966597566110
                   </a>
                 </p>
               </div>
