--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <div class="education-experience">
                   <small class="date">06/2018</small>
                   <h3 class="h5 date-title">Microsft Certified Professional</h3>
-                  <p>Microsft</p>
+                  <p>Microsoft</p>
                 </div>
               </div>
               <div class="col-md-4">
