--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 bugs delivering best quality products possible.
               </p>
               <p>
-                Proactive, take-charge professional with almost 2 years experience in Dot Net (.Net) Core MVC and MVVM Entity Framework providing support 
-                complex projects. I work effectively in a fast productive environment and consistently prioritize tasks to meet deadlines. Excelent 
+                Proactive, take-charge professional with almost 2 years experience in Dot Net (.Net) Core MVC and MVVM, Entity Framework, providing support 
+                in complex projects. I work effectively in a fast productive environment and consistently prioritize tasks to meet deadlines. Excellent 
                 team player, interpersonal skills, attention to details and follow-through skills.
               </p>
 
@@ -122,11 +122,11 @@
               <h3 class="h5 date-title">Dot Net (.Net) Developer - Al Shorouk Business Optimization And Solutions</h3>
               
 
-              <p>- &nbsp; Implement N-Tier Architecture on applications.</p>
+              <p>- &nbsp; Implementing N-Tier Architecture to applications.</p>
               <p>- &nbsp; Implementing Repository Pattern.</p>
               <p>- &nbsp; Using RDBMS Database such as MSSQL/MySQL for data storage.</p>
               <p>- &nbsp; Creating or modifying CRUD functionality.</p>
-              <p>- &nbsp; Creating API's using Json and AJAX.</p>
+              <p>- &nbsp; Creating API's using JSON and AJAX.</p>
               <p>- &nbsp; Creating or modifying user friendly interfaces using HTML5, CSS3, Bootstrap 4 and third party tools like DataTable and SweetAlerts.</p>
               <p>- &nbsp; Creating Use Cases and Design documents.</p>
 
@@ -138,7 +138,7 @@
               
               <p>- &nbsp; Creating and Designing custom WordPress websites using CMS.</p>
               <p>- &nbsp; Applying SEO techniques on pages.</p>
-              <p>- &nbsp; Custom modifying thems as required.</p>
+              <p>- &nbsp; Custom modifying themes as required.</p>
             </div>
           </div>
         </div>
@@ -404,6 +404,14 @@
                   </a>
                 </p>
               </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-block">
+            <h2>Contact</h2>
+            <div class="row">
               <div class="col-md-3">
                 <p class="social-buttons">
                   <a href="mailto:ali.zubair98@outlook.com" title="">
@@ -416,11 +424,21 @@
               </div>
               <div class="col-md-3">
                 <p class="social-buttons">
-                  <a>
+                  <a href="" title="">
                     <span class="social-round-icon fa-icon">
                       <i class="fa fa-phone"></i>
                     </span>
                     +966597566110
+                  </a>
+                </p>
+              </div>
+              <div class="col-md-3">
+                <p class="social-buttons">
+                  <a href="" title="">
+                    <span class="social-round-icon fa-icon">
+                      <i class="fa fa-skype"></i>
+                    </span>
+                    ali.zubair98
                   </a>
                 </p>
               </div>
