--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                 <div class="col-md-4">
                   <img src="./assets/Badges/Python+101+Data+Science.png" class="img-responsive img-rounded" alt="MCP" style="width: 100px; height: 100px;">
                 </div>
+                <div class="col-md-4">
+                  <img src="./assets/Badges/Blockchain_Essentials_V2.png" class="img-responsive img-rounded" alt="MCP" style="width: 100px; height: 100px;">
+                </div>
               </div>
 
               </div>
@@ -148,6 +151,13 @@
           <div class="card-block">
             <h2>Education</h2>
             <div class="row">
+              <div class="col-md-4">
+                <div class="education-experience">
+                  <small class="date">08/2020</small>
+                  <h3 class="h5 date-title">Blockchain Essentials</h3>
+                  <p>Cognitive Class</p>
+                </div>
+              </div>
               <div class="col-md-4">
                 <div class="education-experience">
                   <small class="date">08/2020</small>
@@ -218,23 +228,9 @@
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
+
               <div class="item active">
-                <img src="./assets/crown-clothing/HomePage.png" class="img-responsive" alt="...">
-                <div class="carousel-caption">
-                  <h3 class="h5">Crown Clothing</h3>
-                  <p>Jul 2020</p>
-                </div>
-              </div>
-              <div class="item">
-                <img src="./assets/crown-clothing/Shop.png" class="img-responsive" alt="...">
-                <div class="carousel-caption">
-                  <h3 class="h5">Crown Clothing</h3>
-                  <p>Jul 2020</p>
-                </div>
-              </div>
-
-              <div class="item">
-                <img src="./assets/ORES/HomePage.png" class="img-responsive" alt="...">
+                <img src="./assets/ORES-Snapshots/chrome_2020-08-18_17-07-57.jpg" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Online Real Estate System</h3>
                   <p>Jun 2020</p>
@@ -242,7 +238,7 @@
               </div>
 
               <div class="item">
-                <img src="./assets/ORES/PropertiesView.png" class="img-responsive" alt="...">
+                <img src="./assets/ORES-Snapshots/chrome_2020-08-18_17-08-22.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Online Real Estate System</h3>
                   <p>Jun 2020</p>
@@ -250,7 +246,7 @@
               </div>
 
               <div class="item">
-                <img src="./assets/ORES/GPropertyView.png" class="img-responsive" alt="...">
+                <img src="./assets/ORES-Snapshots/chrome_2020-08-18_17-09-35.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Online Real Estate System</h3>
                   <p>Jun 2020</p>
@@ -258,7 +254,7 @@
               </div>
 
               <div class="item">
-                <img src="./assets/ORES/UPropertyList.png" class="img-responsive" alt="...">
+                <img src="./assets/ORES-Snapshots/chrome_2020-08-18_17-10-19.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Online Real Estate System</h3>
                   <p>Jun 2020</p>
@@ -266,7 +262,7 @@
               </div>
 
               <div class="item">
-                <img src="./assets/ORES/NewProperty.png" class="img-responsive" alt="...">
+                <img src="./assets/ORES-Snapshots/chrome_2020-08-18_17-11-13.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Online Real Estate System</h3>
                   <p>Jun 2020</p>
@@ -274,7 +270,7 @@
               </div>
 
               <div class="item">
-                <img src="./assets/ORES/UViewProp.png" class="img-responsive" alt="...">
+                <img src="./assets/ORES-Snapshots/chrome_2020-08-18_17-11-42.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Online Real Estate System</h3>
                   <p>Jun 2020</p>
@@ -282,7 +278,7 @@
               </div>
 
               <div class="item">
-                <img src="./assets/ORES/UpdateProp.png" class="img-responsive" alt="...">
+                <img src="./assets/ORES-Snapshots/chrome_2020-08-18_17-13-43.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Online Real Estate System</h3>
                   <p>Jun 2020</p>
@@ -290,7 +286,7 @@
               </div>
 
               <div class="item">
-                <img src="./assets/ORES/APropList.png" class="img-responsive" alt="...">
+                <img src="./assets/ORES-Snapshots/chrome_2020-08-18_17-14-37.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Online Real Estate System</h3>
                   <p>Jun 2020</p>
@@ -298,7 +294,7 @@
               </div>
 
               <div class="item">
-                <img src="./assets/ORES/PropRequest.png" class="img-responsive" alt="...">
+                <img src="./assets/ORES-Snapshots/chrome_2020-08-18_17-18-09.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Online Real Estate System</h3>
                   <p>Jun 2020</p>
@@ -306,7 +302,7 @@
               </div>
 
               <div class="item">
-                <img src="./assets/ORES/PropRequestView.png" class="img-responsive" alt="...">
+                <img src="./assets/ORES-Snapshots/chrome_2020-08-18_17-18-30.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Online Real Estate System</h3>
                   <p>Jun 2020</p>
@@ -314,39 +310,7 @@
               </div>
 
               <div class="item">
-                <img src="./assets/ORES/PropDelete.png" class="img-responsive" alt="...">
-                <div class="carousel-caption">
-                  <h3 class="h5">Online Real Estate System</h3>
-                  <p>Jun 2020</p>
-                </div>
-              </div>
-
-              <div class="item">
-                <img src="./assets/ORES/UPropView.png" class="img-responsive" alt="...">
-                <div class="carousel-caption">
-                  <h3 class="h5">Online Real Estate System</h3>
-                  <p>Jun 2020</p>
-                </div>
-              </div>
-
-              <div class="item">
-                <img src="./assets/ORES/PurchaseProp.png" class="img-responsive" alt="...">
-                <div class="carousel-caption">
-                  <h3 class="h5">Online Real Estate System</h3>
-                  <p>Jun 2020</p>
-                </div>
-              </div>
-
-              <div class="item">
-                <img src="./assets/ORES/SignIn.png" class="img-responsive" alt="...">
-                <div class="carousel-caption">
-                  <h3 class="h5">Online Real Estate System</h3>
-                  <p>Jun 2020</p>
-                </div>
-              </div>
-
-              <div class="item">
-                <img src="./assets/ORES/USignUp.jpg" class="img-responsive" alt="...">
+                <img src="./assets/ORES-Snapshots/2020-08-18_18-44-08.png" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Online Real Estate System</h3>
                   <p>Jun 2020</p>
@@ -368,15 +332,42 @@
               <li data-target="#carousel-example-generic" data-slide-to="8"></li>
               <li data-target="#carousel-example-generic" data-slide-to="9"></li>
               <li data-target="#carousel-example-generic" data-slide-to="10"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="11"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="12"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="13"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="14"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="15"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="16"></li>
             </ol>
 
           </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-block">
+            <h2>Projects</h2>
+
+            <div class="carousel slide" data-ride="carousel" id="carousel-example-generic2">
+              <!--Wrapper for slides-->
+              <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                  <img src="./assets/crown-clothing/HomePage.png" class="img-responsive" alt="...">
+                  <div class="carousel-caption">
+                    <h3 class="h5">Crown Clothing</h3>
+                    <p>Jul 2020</p>
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="./assets/crown-clothing/Shop.png" class="img-responsive" alt="...">
+                  <div class="carousel-caption">
+                    <h3 class="h5">Crown Clothing</h3>
+                    <p>Jul 2020</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic2" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic2" data-slide-to="1"></li>
+            </ol>
+
           </div>
         </div>
         
